Bug 82043 - Start Center green sidebar text is too small
Summary: Start Center green sidebar text is too small
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0 target:4.3.3
Keywords:
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2014-08-02 07:25 UTC by tommy27
Modified: 2014-09-26 16:52 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot 4.2.x vs. 4.4.x (246.65 KB, image/png)
2014-08-02 07:25 UTC, tommy27
Details
Highlighted the very noticable instances (20.38 KB, image/png)
2014-08-09 03:38 UTC, Yousuf Philips (jay) (retired)
Details
After switching to Bold (78.75 KB, image/png)
2014-08-10 07:46 UTC, Emir Sarı
Details
LibO 4.3.0 vs 4.3.1 (229.12 KB, image/png)
2014-08-31 22:41 UTC, Yousuf Philips (jay) (retired)
Details
Sidebar - font multiplier LibO 4.3.2.1 vs 4.4.0alpha+ (72.20 KB, image/png)
2014-09-12 16:35 UTC, V Stuart Foote
Details
Sidebar in Windows (1.12 KB, image/png)
2014-09-13 02:07 UTC, Urmas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tommy27 2014-08-02 07:25:42 UTC
Created attachment 103854 [details]
screenshot 4.2.x vs. 4.4.x

I've noticed that the Start Center green sidebar is narrower and have very small font size if compared to previous releases.

see attached screenshot... apart from the different UI localization, you will see reduced width and smaller font size.

one could argue that the font size in 4.2.x was too large, anyway the current shrinking that has been done in 4.4.x looks too much too me and uneasy to read.

maybe it was intended to uniform the font size of the sidebar to that of the "File, Tools, Help" menus in the menubar.

anyway IMHO this is too small, maybe we should consider to enlarge it again at an intermediate size between 4.2.x and 4.4.x
Comment 1 tommy27 2014-08-02 07:26:08 UTC
tested under Win7x64 using Version: 4.4.0.0.alpha0+
Build ID: 9f803ee4b64e11e481ae9bf92ffac7cbf568675a
TinderBox: Win-x86@42, Branch:master, Time: 2014-07-28_06:27:11
Comment 2 Emir Sarı 2014-08-02 07:32:31 UTC
This was recently fixed, as text size on OS X was disturbingly large. Previous situation was a lot worse I say.
Comment 3 tommy27 2014-08-02 07:42:45 UTC
as said before, probably the best situation would be in the middle, smaller than 4.2.x but larger than 4.4.x... maybe just a 20-30% font increase would be enough.

if font size is not going to be changed we should also consider to use bold fonts like in 4.2.x instead of thin regular fonts like in 4.4.x to improve readability.

just my 2 cents.
Comment 4 Yousuf Philips (jay) (retired) 2014-08-02 09:08:23 UTC
I was thinking of reporting this issue myself a few days back. :)

This effects both 4.3.1 and 4.4 alpha. I agree that somewhere in the middle would be good, like tommy suggested.
Comment 5 tommy27 2014-08-02 10:58:59 UTC
Ok, I set status to NEW since it seems I'm not the only one disliking this very small font size. let's see what the UX team thinks about.
Comment 6 V Stuart Foote 2014-08-02 13:24:45 UTC
Folks, as Emir points out, recent chages were done as  previously it was very bad on OSX.

The work to add adjustable text weights and sizes was done by Caolán and Michael M. on bug 80476 -- Start Center sidebar button labels are too large and vary in size on different operating systems work on backingwindow.cxx

Those commits probably need additional attention. Adding Michael and Caolán.
Comment 7 Adolfo Jayme Barrientos 2014-08-02 18:30:24 UTC
Why did you add ux-advise? Triagers, please spam that list properly, with actual UX requests, not obvious bugs such as this one.
Comment 8 Emir Sarı 2014-08-02 19:51:56 UTC
Okay...

To set the facts straight, green frame text size is not small, it is the standard text size of the application, and it is the way it should be.

Let me tell you why,

First, for the sake of visual consistency, all (clickable or not) texts within one application should be the same size. If not, it will look like some student project of some kind (no offense to GSOC students). 

Please show me any professional grade application with varying font sizes.

Secondly, Start Center IMHO still cares about marketing, more than functionality. Green Sidebar is also something very rare to see, although it is understandable for marketing reasons, still looks very bling bling. For that reason there is no reason to put BIG fonts to make it even less professional. 

So I propose to close this bug as WONTFIX.

If someone needs bigger text sizes, OS accessibility settings will provide that I think. 

Also, instead of these small things, we should concentrate more on actual UX and design problems I think.
Comment 9 tommy27 2014-08-02 20:54:50 UTC
as said in comment 3 I think that bold fonts would be probably be enough to improve readibility even without enlarging the font size itself
Comment 10 Yousuf Philips (jay) (retired) 2014-08-02 21:11:52 UTC
(In reply to comment #8)
> Please show me any professional grade application with varying font sizes.

As you asked for one, here is one: Word 2013

http://www.word-2013-tutorials.com/wp-content/uploads/2013/04/welcome-screen.jpg
http://www.kalliance.com/blog/wp-content/uploads/2013/02/word-2013.jpg
Comment 11 Emir Sarı 2014-08-02 21:58:19 UTC
(In reply to comment #10)
> (In reply to comment #8)
> > Please show me any professional grade application with varying font sizes.
> 
> As you asked for one, here is one: Word 2013
> 
> http://www.word-2013-tutorials.com/wp-content/uploads/2013/04/welcome-screen.
> jpg
> http://www.kalliance.com/blog/wp-content/uploads/2013/02/word-2013.jpg

Right, but it is proportional and has good balancing within frames. Also except the header, biggest font there looks smaller from previous Start Center font (judging from mobile screen). 

LibreOffice doesn't have the developer power to reach this level of professional design, if someone can, I am all on for previous font size. 

Also I should have said proportional from the beginning, sorry about that.
Comment 12 Commit Notification 2014-08-07 17:15:45 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=04b02f2f5a4f71198e0cb616404c4721c918afe6

Resolves: fdo#82043 use a bold font for the start-center buttons



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Caolán McNamara 2014-08-07 18:06:35 UTC
Lets give bold a go first. Let me know how that grabs you.
Comment 14 tommy27 2014-08-08 07:08:28 UTC
tested with  4.4.0.0.alpha0+
Build ID: 57dcc9f3e9a7d2ebc86cf444729a7a08820418a1
TinderBox: Win-x86@39, Branch:master, Time: 2014-08-08_00:45:46

I'm happy with bold font. I set status as FIXED.
Comment 15 Emir Sarı 2014-08-08 08:54:04 UTC
Looks neat as well.
Comment 16 Yousuf Philips (jay) (retired) 2014-08-09 03:38:37 UTC
Created attachment 104325 [details]
Highlighted the very noticable instances

Bold does make it slightly better, but i've noticed that some letters are to close to the next, so is it possible to add even 1 or 2 extra spacing pixels between letters.
Comment 17 Emir Sarı 2014-08-10 07:46:15 UTC
Created attachment 104375 [details]
After switching to Bold

I think I've changed my mind. Here there is a comparison, Normal weight seems much better.
Comment 18 Yousuf Philips (jay) (retired) 2014-08-10 23:10:11 UTC
Yep normal weight is better, similar to how it used to be. What is really needed is the increase of the font size by maybe 2 points.
Comment 19 Adolfo Jayme Barrientos 2014-08-15 00:45:03 UTC
http://cgit.freedesktop.org/libreoffice/core/commit/?id=8288aaa59a7df3f3632e98e824aef29a25b96b47

After all of this series of changes, nobody can accuse LibreOffice of not listening to its users, who may not now what they actually want…
Comment 20 Michael Meeks 2014-08-15 01:26:19 UTC
Hah - of course, this really should be an easy hack, and not a series of star hackers; but - why was it a MAB in the begginning ? who can say ?
Comment 21 Yousuf Philips (jay) (retired) 2014-08-31 22:41:47 UTC
Created attachment 105514 [details]
LibO 4.3.0 vs 4.3.1

It would be great if this was backported to 4.3, because unfortunately the small text got into 4.3.1.2, as stated in comment 3, and in the arabic UI its quite hard to see a number of the letters properly.
Comment 22 V Stuart Foote 2014-09-01 00:58:47 UTC
The removal of bold and the 1.4f multiplier applied to master with http://cgit.freedesktop.org/libreoffice/core/commit/?id=8288aaa59a7df3f3632e98e824aef29a25b96b47  now looks about right working in Windows 7 sp1, 64-bit en-US
Version: 4.4.0.0.alpha0+
Build ID: 32ce5ae15a8f156b4681c36d248b6731df3457c6
TinderBox: Win-x86@42, Branch:master, Time: 2014-08-25_01:27:12

@Kendy, *, could we go ahead and back port for 4.3.2?
Comment 23 Yousuf Philips (jay) (retired) 2014-09-12 14:31:06 UTC
This would need to be backported to both 4.3.2 and 4.3.3, as 4.3.2.1 has just been issued.
Comment 24 V Stuart Foote 2014-09-12 16:35:03 UTC
Created attachment 106197 [details]
Sidebar - font multiplier LibO 4.3.2.1 vs 4.4.0alpha+

See attached image comparing sidebar 4.3.2.1 vs current 4.4.0alpha+ on Windows

A backport of adjusted multiplier has yet to make it to the 4.3.2.1 build, think it would be very useful if it did.  Any 3 devs agree?
Comment 25 Urmas 2014-09-13 02:07:43 UTC
Created attachment 106203 [details]
Sidebar in Windows

Without the bold font the sidebar is barely readable due to the low contrast.
Text in sidebar needs to be bold.
Comment 26 V Stuart Foote 2014-09-13 12:18:52 UTC
@Urmas, *,

(In reply to comment #25)
> Without the bold font the sidebar is barely readable due to the low contrast.
> Text in sidebar needs to be bold.

We've been down this road... using bold just looked ugly for the month it was in place, and the non-bold as currently in 4.3.x remains at the wrong proportion. 

Upping the multiplier from 1.2 --> 1.4 brings the font to a better proportion to the icons (possibly could use an additional half a percent or so, i.e. 1.45 or 1.5) but it has been that way in the 4.4.0alpha+ builds for several weeks--no complaints.

From a design perspective, it looks composed. The low contrast (white on green) is not really an issue--the ODF Icons identify the rolls, the subdued text "label" just help identify the branding. Proportion was the only issue.

Stuart
Comment 27 Yousuf Philips (jay) (retired) 2014-09-26 04:25:02 UTC
Patch submitted for 4.3 - https://gerrit.libreoffice.org/#/c/11651/1
Comment 28 Commit Notification 2014-09-26 08:23:37 UTC
Yousuf Philips committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c0cb2dc6a6bc539f4cdad2bc54cbbde29c69ea7e&h=libreoffice-4-3

fdo#82043: Instead of the bold font, use a higher multiplifier (4.3 backport)


It will be available in LibreOffice 4.3.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 29 V Stuart Foote 2014-09-26 13:11:53 UTC
(In reply to comment #27)
> Patch submitted for 4.3 - https://gerrit.libreoffice.org/#/c/11651/1

Thanks Jay, (and Caolán).

Wow Jay, that's a half dozen commits now. At what point does your role change from designer/qa to dev? Pretty soon we're going to start expecting that you also code your GUI/UX suggestions--I'm just kidding.  And again a thank you for everything you've been contributing.

Stuart
Comment 30 Yousuf Philips (jay) (retired) 2014-09-26 16:52:03 UTC
(In reply to comment #29)
> Wow Jay, that's a half dozen commits now. At what point does your role
> change from designer/qa to dev? Pretty soon we're going to start expecting
> that you also code your GUI/UX suggestions--I'm just kidding.  And again a
> thank you for everything you've been contributing.

Wouldnt really call changing a few xml files or changing a number, when it is already changed in master, real dev work. Dont have any c++ skills, so my dev work will be quite limited. :)