Resolves: fdo#82043 use a bold font for the start-center buttons

Change-Id: I4d947060815559f68cd200d8103868014ea6ac2d